--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "glob": "^7.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.8.3",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.3",
